updates en facilidades, correcciones en breadcrumbs titulares, borrar comentario de suplidor en webmaster

--- a/WebApplication1/Areas/coadmin/Views/contratos/archivados.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/archivados.cshtml
@@ -19,7 +19,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Contratos archivados</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "contratos", new { area = "coadmin" })" class="text-success"> Contratos</a></li>
+                            <li class="breadcrumb-item active">Archivados</li>
                         </ul>
                     </div>
                 </div>
