--- a/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/editar.cshtml
@@ -18,7 +18,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })" class="text-success">Listado de cuotas</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })" class="text-success">Cuotas</a></li>
                             <li class="breadcrumb-item active">Editar cuota</li>
                         </ul>
                     </div>
