--- a/WebApplication1/Areas/coadmin/Views/eventos/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/agregar.cshtml
@@ -27,7 +27,7 @@
                                 }
                                 else
                                 {
-                                    <li class="breadcrumb-item"><a href="@Url.Action("registrados", "eventos", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Ultimos eventos registrados</a></li>
+                                    <li class="breadcrumb-item"><a href="@Url.Action("registrados", "eventos", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Ultimos eventos</a></li>
                                 }
                             }
                             <li class="breadcrumb-item active">Agregar evento</li>
