--- a/WebApplication1/Areas/webmaster/Views/suplidores/editar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/editar.cshtml
@@ -97,7 +97,7 @@
                                     <input maxlength="20" class="form-control soloTexto" type="text" value="@Model.editSupplier.contact_name"
                                            data-toggle="tooltip" title="Nombre de contacto del suplidor"
                                            placeholder="Nombre de contacto" id="example-name1-input" name="contact_name" required>
-                                    <@*small class="form-text text-muted">Nombre de contacto del suplidor</small>*@
+                                    @*small class="form-text text-muted">Nombre de contacto del suplidor</small>*@
                                 </div>
                             </div>
                             <div class="form-divider"></div>
