--- a/WebApplication1/Areas/webmaster/Views/suplidores/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/ver.cshtml
@@ -139,11 +139,12 @@
                                             </td>
                                             <td class="text-center">
                                                 <a href="#">
-                                                    <button type="button" onclick="onDeleteComment(this)" data-id="@comment.id"
-                                                            class="btn btn-danger waves-effect waves-light btn-sm"
-                                                            data-toggle="tooltip" data-placement="top" title="Eliminar">
-                                                    <i class="mdi mdi-delete"></i></button>
-                                                </a>
+                                                    <button type="button" onclick="onDeleteSupplierComment(this)" data-id="@comment.id"
+                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                            data-toggle="tooltip" data-placement="top"
+                                                            title="Eliminar">
+                                                        <i class="mdi mdi-delete"></i>
+                                                    </button>
                                             </td>
                                         </tr>
                                     }
