--- a/WebApplication1/Views/documentos/legales.cshtml
+++ b/WebApplication1/Views/documentos/legales.cshtml
@@ -20,7 +20,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Documentos legales de la comunidad</li>
+                            <li class="breadcrumb-item active">Documentos</li>
                         </ul>
                     </div>
                 </div>
