--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -100,6 +100,10 @@
         #dataTable-documentos-legales_filter {
             display: none !important;
         }
+
+         #blogTable_filter {
+            display: none !important;
+        }
     </style>
 </head>
 
