--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarcomentario.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarcomentario.cshtml
@@ -20,7 +20,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("blog", "comunicaciones", new { area = "coadmin" })" class="text-success">Blog general</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("blog", "comunicaciones", new { area = "coadmin" })" class="text-success">Blog</a></li>
                             <li class="breadcrumb-item"><a href="@Url.Action("verblog", "comunicaciones", new { area = "coadmin", blogID = Model.blogID })" class="text-success">Ver blog</a></li>
                             <li class="breadcrumb-item active">Agregar comentario</li>
                         </ul>
