--- a/WebApplication1/Areas/coadmin/Views/contacto/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/editar.cshtml
@@ -206,7 +206,7 @@
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("listado", "contacto", new { area = "coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
