--- a/WebApplication1/Areas/coadmin/Views/contratos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/editar.cshtml
@@ -28,7 +28,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin"  })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "contratos", new { area = "coadmin" })" class="text-success"> Listado de contratos</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "contratos", new { area = "coadmin" })" class="text-success"> Contratos</a></li>
                             <li class="breadcrumb-item active">Editar contrato</li>
                         </ul>
                     </div>
