--- a/WebApplication1/Areas/coadmin/Views/cuotas/editarCuenta.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/cuotas/editarCuenta.cshtml
@@ -19,7 +19,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listadoCuentas", "cuotas", new { area = "coadmin" })" class="text-success">Listado de cuentas de banco</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "cuotas", new { area = "coadmin" })" class="text-success">Cuotas</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoCuentas", "cuotas", new { area = "coadmin" })" class="text-success">Cuentas de banco</a></li>
                             <li class="breadcrumb-item active">Editar cuenta</li>
                         </ul>
                     </div>
