--- a/WebApplication1/Areas/coadmin/Views/eventos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/editar.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("registrados", "eventos", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Ultimos eventos registrados</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("registrados", "eventos", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Ultimos eventos</a></li>
                             <li class="breadcrumb-item active">Editar evento</li>
                         </ul>
                     </div>
