--- a/WebApplication1/Areas/coadmin/Views/eventos/registrado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/registrado.cshtml
@@ -20,7 +20,7 @@
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
                             <li class="breadcrumb-item"><a href="@Url.Action("otros", "eventos", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Calendario de eventos</a></li>
-                            <li class="breadcrumb-item active">Ver evento registrado</li>
+                            <li class="breadcrumb-item active">Ver evento</li>
                         </ul>
                     </div>
                 </div>
