--- a/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/agregar.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })" class="text-success"> Facilidades disponibles</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })" class="text-success"> Facilidades</a></li>
                             <li class="breadcrumb-item active">Agregar facilidad</li>
                         </ul>
                     </div>
@@ -61,94 +61,124 @@
                        }))
                     {
                         @Html.AntiForgeryToken()
-                        <div class="card-body">
-                            <h5 class="d-inline-block">Nueva facilidad</h5>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
-                                <div class="col-sm-9">
-                                    <input maxlength="30" class="form-control soloTexto" type="text" value="" name="first_name" required
-                                           data-toggle="tooltip" title="Nombre de la facilidad"
-                                           placeholder="Nombre" id="example-email-input">
-                                    <small class="form-text text-muted">Nombre de la facilidad</small>
-                                </div>
+                    <div class="card-body">
+                        <h5 class="d-inline-block">Nueva facilidad</h5>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
+                            <div class="col-sm-9">
+                                <input maxlength="30" class="form-control soloTexto" type="text" value="" name="first_name" required
+                                       data-toggle="tooltip" title="Nombre de la facilidad"
+                                       placeholder="Nombre" id="example-email-input">
+                                <small class="form-text text-muted">Nombre de la facilidad</small>
                             </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
-                                <div class="col-sm-9">
-                                    <textarea maxlength="90" class="form-control" rows="3" name="description"
-                                              data-toggle="tooltip" title="Descripción de la facilidad"
-                                              placeholder="Descripción" required></textarea>
-                                    <small class="form-text text-muted">Descripción de la facilidad</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-time-input" class="col-sm-3 col-form-label">Hora de inicio</label>
-                                <div class="col-sm-9">
-                                    <input step="1" class="form-control" max="21:00" min="08:00" type="time" name="start_time" required
-                                           data-toggle="tooltip" title="Hora de inicio de disponibilidad"
-                                           value="" id="example-time-input">
-                                    <small class="form-text text-muted">Hora de inicio de disponibilidad</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-time-input" class="col-sm-3 col-form-label">Hora de fin</label>
-                                <div class="col-sm-9">
-                                    <input step="1" class="form-control" min="09:00" max="22:00" type="time" name="end_time" required
-                                           data-toggle="tooltip" title="Hora de fin de disponibilidad"
-                                           value="" id="example-time-input">
-                                    <small class="form-text text-muted">Hora de fin de disponibilidad</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label class="col-sm-3 col-form-label">Duración de reservaciones</label>
-                                <div class="col-sm-9">
-                                    <select required class="form-control" name="duration"
-                                            data-toggle="tooltip" title="Duración de reservaciones en horas">
-                                        @foreach (var i in Model.timeList)
-                                        {
-                                            <option value="@i">@i hora</option>
-                                        }
-                                    </select>
-                                    <small class="form-text text-muted">Duración de reservaciones en horas</small>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-date-input" class="col-sm-3 col-form-label">Costo por reservación</label>
-                                <div class="col-sm-9">
-                                    <div class="input-group mt-2">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="fas fa-dollar-sign"></i></span>
-                                        </div>
-                                        <input maxlength="20" type="text" onkeypress="return filterFloat(event,this);" class="form-control" name="cost_reservation" required
-                                               data-toggle="tooltip" title="Pago por la reserva de la facilidad" />
-                                    </div>
-                                    <small class="form-text text-muted">Pago por la reserva de la facilidad</small>
-                                </div>
-                            </div>
-
-                            <div class="form-divider"></div>
-                            <div class="form-group row">
-                                <label for="example-lastname1-input" class="col-sm-3 col-form-label">Reglamento</label>
-                                <div class="col-sm-9">
-                                    <div class="input-group mt-2">
-                                        <div class="custom-file">
-                                            <input type="file" class="custom-file-input" id="inputGroupFile04"
-                                                   name="upload_regulation" />
-                                            <label id="input-arch" class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
+                            <div class="col-sm-9">
+                                <textarea maxlength="90" class="form-control" rows="3" name="description"
+                                          data-toggle="tooltip" title="Descripción de la facilidad"
+                                          placeholder="Descripción" required></textarea>
+                                <small class="form-text text-muted">Descripción de la facilidad</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-time-input" class="col-sm-3 col-form-label">Hora de inicio</label>
+                            <div class="col-sm-2">
+                                <select required class="form-control" name="start_time"
+                                        data-toggle="tooltip" title="Hora de inicio de disponibilidad" id="start_time">
+                                    <option value="">--:--</option>
+                                    @foreach (var item in Model.timeListIni)
+                                    {
+                                        <option value="@item.Substring(0,2)">@item</option>
+                                    }
+                                </select>
+                                <small class="form-text text-muted">Hora de inicio de disponibilidad</small>
+                            </div>
+                        </div>
+                        @*<div class="form-divider"></div>
+        <div class="form-group row">
+            <label for="example-time-input" class="col-sm-3 col-form-label">Hora de inicio</label>
+            <div class="col-sm-9">
+                <input step="1" class="form-control" max="21:00" min="08:00" type="time" name="start_time" required
+                       data-toggle="tooltip" title="Hora de inicio de disponibilidad"
+                       value="" id="example-time-input">
+                <small class="form-text text-muted">Hora de inicio de disponibilidad</small>
+            </div>
+        </div>*@
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-time-input" class="col-sm-3 col-form-label">Hora de fin</label>
+                            <div class="col-sm-2">
+                                <select required class="form-control" name="end_time"
+                                        data-toggle="tooltip" title="Hora de fin de disponibilidad" id="end_time">
+                                    <option value="">--:--</option>
+                                    @foreach (var item in Model.timeListFin)
+                                    {
+                                        <option value="@item.Substring(0,2)">@item</option>
+                                    }
+                                </select>
+                                <small class="form-text text-muted">Hora de fin de disponibilidad</small>
+                            </div>
+                        </div>
+                        @*<div class="form-group row">
+                            <label for="example-time-input" class="col-sm-3 col-form-label">Hora de fin</label>
+                            <div class="col-sm-9">
+                                <input step="1" class="form-control" min="09:00" max="22:00" type="time" name="end_time" required
+                                       data-toggle="tooltip" title="Hora de fin de disponibilidad"
+                                       value="" id="example-time-input">
+                                <small class="form-text text-muted">Hora de fin de disponibilidad</small>
+                            </div>
+                        </div>*@
+                        <div class="form-divider"></div>
+
+                        <div class="form-group row">
+                            <label class="col-sm-3 col-form-label">Duración de reservaciones</label>
+                            <div class="col-sm-9">
+                                <select required class="form-control" name="duration"
+                                        data-toggle="tooltip" title="Duración de reservaciones en horas">
+                                    @foreach (var i in Model.timeList)
+                                    {
+                                        <option value="@i">@i hora</option>
+                                    }
+                                </select>
+                                <small class="form-text text-muted">Duración de reservaciones en horas</small>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-date-input" class="col-sm-3 col-form-label">Costo por reservación</label>
+                            <div class="col-sm-9">
+                                <div class="input-group mt-2">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-dollar-sign"></i></span>
+                                    </div>
+                                    <input maxlength="20" type="text" onkeypress="return filterFloat(event,this);" class="form-control" name="cost_reservation" required
+                                           data-toggle="tooltip" title="Pago por la reserva de la facilidad" />
+                                </div>
+                                <small class="form-text text-muted">Pago por la reserva de la facilidad</small>
+                            </div>
+                        </div>
+
+                        <div class="form-divider"></div>
+                        <div class="form-group row">
+                            <label for="example-lastname1-input" class="col-sm-3 col-form-label">Reglamento</label>
+                            <div class="col-sm-9">
+                                <div class="input-group mt-2">
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="inputGroupFile04"
+                                               name="upload_regulation" />
+                                        <label id="input-arch" class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-divider"></div>
+                        <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
+                        <a href="@Url.Action("disponibles", "facilidades", new { area ="coadmin" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                    </div>
                     }
                 </div>
             </div>
