--- a/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/suplidores/versuplidor.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "suplidores", new { area = "coadmin" })" class="text-success"> Listado de suplidores</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "suplidores", new { area = "coadmin" })" class="text-success"> Suplidores</a></li>
                             <li class="breadcrumb-item active">Ver suplidor</li>
                         </ul>
                     </div>
