--- a/WebApplication1/Areas/coadmin/Views/tareas/vertarea.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/vertarea.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i>Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "tareas", new { area ="coadmin" })" class="text-success"> Listado de tareas</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "tareas", new { area ="coadmin" })" class="text-success"> Tareas</a></li>
                             <li class="breadcrumb-item active">Ver tarea</li>
                         </ul>
                     </div>
