--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/verblog.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/verblog.cshtml
@@ -57,7 +57,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item"><a href="@Url.Action("blog", "comunicaciones", new { area = "webmaster" })" class="text-success">Blog general</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("blog", "comunicaciones", new { area = "webmaster" })" class="text-success">Blog</a></li>
                             <li class="breadcrumb-item active">Ver blog</li>
                         </ul>
                     </div>
