--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -103,7 +103,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
             display: none !important;
         }
 
-        #dataTable-documentos-legales_filter {
+        #blogTable_filter {
+            display: none !important;
+        }
+
+         #dataTable-documentos-legales_filter {
             display: none !important;
         }
 
