--- a/WebApplication1/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Views/comunicaciones/blog.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Blog general</li>
+                            <li class="breadcrumb-item active">Blog</li>
                         </ul>
                     </div>
                 </div>
@@ -49,15 +49,8 @@
                                 <h5 class="d-inline-block">Últimas entradas</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                @if (Session["CURRENT_COMU"] != null)
-                                {
-                                <a href="@Url.Action("agregarblog", "comunicaciones")"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
-                                }
-                                else
-                                {
-                                <a><button type="button" disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>
-                                }
-                                
+                               
+                                <a href="@Url.Action("agregarblog", "comunicaciones")"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Nueva entrada</button></a>                                                                                               
                             </div>
                         </div>
                         <div class="table-responsive">
@@ -98,7 +91,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("panel", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
