--- a/WebApplication1/Views/control/verTitulo.cshtml
+++ b/WebApplication1/Views/control/verTitulo.cshtml
@@ -56,6 +56,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoTitulos", "control")" class="text-success">Títulos</a></li>
                             <li class="breadcrumb-item active">Ver título</li>
                         </ul>
                     </div>
