--- a/WebApplication1/Views/control/verVehiculo.cshtml
+++ b/WebApplication1/Views/control/verVehiculo.cshtml
@@ -40,6 +40,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("community", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoTitulos", "control")" class="text-success">Títulos</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listadoVehiculos", "control", new { Id = Model.vehiculo.IdTitulo })" class="text-success">Vehículos</a></li>
                             <li class="breadcrumb-item active">Ver vehículo</li>
                         </ul>
                     </div>
