--- a/WebApplication1/Views/eventos/registrado.cshtml
+++ b/WebApplication1/Views/eventos/registrado.cshtml
@@ -19,7 +19,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Ver evento registrado</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("calendario", "eventos")" class="text-success">Calendario de eventos</a></li>                            
+                            <li class="breadcrumb-item active">Ver evento</li>
                         </ul>
                     </div>
                 </div>
@@ -40,12 +41,7 @@
                 </div>
             </div>
         </div><!--end row-->
-        <!-- back button -->
-        <div class="row pb-4">
-            <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
-            </div>
-        </div>
+        <!-- back button -->        
         <!-- end back button -->
         <div class="row">
 
@@ -85,7 +81,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("calendario", "eventos")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
