--- a/WebApplication1/Views/facilidades/reservas.cshtml
+++ b/WebApplication1/Views/facilidades/reservas.cshtml
@@ -19,6 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("disponibles", "facilidades")" class="text-success"> Facilidades</a></li>
                             <li class="breadcrumb-item active">Estado de reservas</li>
                         </ul>
                     </div>
@@ -29,7 +30,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="@Url.Action("community", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("disponibles", "facilidades")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -89,7 +90,7 @@
                                                 <td class="text-center"><button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1">Rechazado</button></td>
                                             }
                                             <td class="text-center">
-                                               @item.cost_reservation.ToString().Replace(',', '.')
+                                               @item.cost_per_reservation.ToString().Replace(',', '.')
                                             </td>
                                         </tr>
                                     }
@@ -104,7 +105,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="@Url.Action("community", "control")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("disponibles", "facilidades")"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
